# ctoc

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPORT.md  collect_data.py  ctoc.cc  ctoc_smoke_test.cc  extract_vocab.py  gen_vocab.py  model.pt  model.py  model_final.pt  model_full.pt  model_quick.pt  new_digit_tokens.json  new_repeat_tokens.json  requirements.txt  requirements_lock.txt  reverify_vocab.py  test_tokenizer.py  tokenizer.py  train.py  unicode_crossref.py  vocab_tiktoken.json
