load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "tokenizer_lib",
    srcs = ["tokenizer.py"],
    deps = [
        requirement("anthropic"),
    ],
)

py_binary(
    name = "test_tokenizer",
    srcs = ["test_tokenizer.py"],
    deps = [
        ":tokenizer_lib",
        requirement("anthropic"),
    ],
)

py_binary(
    name = "extract_vocab",
    srcs = ["extract_vocab.py"],
    deps = [
        ":tokenizer_lib",
        requirement("anthropic"),
    ],
)

py_binary(
    name = "collect_data",
    srcs = ["collect_data.py"],
    deps = [
        ":tokenizer_lib",
        requirement("anthropic"),
        requirement("datasets"),
    ],
)

py_library(
    name = "model_lib",
    srcs = ["model.py"],
    deps = [
        requirement("torch"),
    ],
)

py_binary(
    name = "train",
    srcs = ["train.py"],
    data = ["training_data.jsonl"],
    deps = [
        ":model_lib",
        requirement("torch"),
    ],
)
